[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
rust-crypto = "0.2.36"
chrono = "0.4"
rand = {version = "0.6.5", features = ["std"]}
hex="0.4.3"
secp256k1 = { version = "0.20.3", features = ["rand"] }
