[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
rust-crypto = "0.2.36"
rand = { version = "0.6.5", features = ["std"] }
secp256k1 = { version = "0.20.3", features = ["rand"] }
hex="0.4.3"
web3 = "0.17.0"
